--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ dotenv = "0.15.0"
 serde = { version = "1.0.151", features = ["derive"] }
 sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "sqlite"] }
 tokio = { version = "1.23.0", features = ["rt-multi-thread", "macros"] }
+tower-http = { version = "0.3.5", features = ["cors"] }
 tracing = "0.1.37"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
